--- a/src/components/Login-group/Login-group.module.scss
+++ b/src/components/Login-group/Login-group.module.scss
@@ -6,17 +6,24 @@
   margin-top: 20px;
 
   .btn {
-    width: 70px;
-    height: 20px;
+      border: none;
+      padding: 10px 25px;
+      margin: -10px 0;
 
-    border: none;
+      background: #E76E6E;
+      color: #f4f4f4;
 
-    background: #7AE291;
+      transition: .5s ease;
 
     display: flex;
     justify-content: center;
     align-items: center;
-  }
+
+      cursor: pointer;
+      &:hover {
+        background: #D26868;
+      }
+    }
 
   a {
     line-height: 1.2rem;
