make a little bit adaptive

--- a/src/components/Auth-group/Auth-group.module.scss
+++ b/src/components/Auth-group/Auth-group.module.scss
@@ -11,3 +11,14 @@
     }
   }
 }
+
+
+@media (max-width: 420px) {
+  .Auth-group {
+    width: 250px;
+
+    input {
+      height: 20px;
+    }
+  }
+}
